--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
