--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
-    "lodash.groupby": "^4.6.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.15",
     "querystring": "^0.2.1"
   },
